Tue Dec 25 09:54:21 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSButtonCell.m ([-drawInteriorWithFrame:inView:]): Draw
	the background color.

Tue Dec 25 09:23:24 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSScrollView.m ([-_doScroll:]): Mark the horizontal and
	vertical ruler as needing redisplay if needed.
	([-setHorizontalRulerView:]): Add/remove the new horizontal ruler
	as a subview; set _hasHorizontalRule to NO if the new horizontal
	ruler is nil; tile if rulers are visible.
	([-setHasVerticalRuler:]): Similar changes.
	([-setHasHorizontalRuler:]): Rewritten.  In particular, use the
	class specified in +rulerViewClass when creating the new ruler.
	([-setVerticalRulerView:]): Similar changes.
	(Patches from Diego Luis Kreutz <kreutz@inf.ufsm.br> modified).
	
2001-12-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m
	[dragOperationForDraggingInfo:type:] added NSDragOperationCopy to
	the valid drag actions.
	
2001-12-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m
	Added some NSResponder methods with empty code to keep the
	NSInputManager quiet.
	* Source/NSApplication.m
	[initialize] retain the gui bundle and added an auto release pool
	as this might be called without one installed.
	
2001-12-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextView.m
	[writeSelectionToPasteboard:types:] corrected C binary operator
	short cut logic	that prevented us froam adding more than one
	string type to the pasteboard. Remember that || wont evaluate the
	second operand if the first is true.
	
Fri Dec 21 18:50:17 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Headers/gnustep/gui/GSGuiPrivate.h: New file.
	* GNUmakefile (SUBPROJECTS): Added Resources.
	* Resources/GNUmakefile: New file.
	* Resources/Italian.lproj/Localizable.strings: New file.
	* Resources/English.lproj/Localizable.strings: New file.
	* Source/NSApplication.m ([+initialize]): Create the gnustep-gui
	bundle used for loading localized messages.