@@ -1,3 +1,8 @@
+2001-12-29  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/GSServicesManager.m: ([GSListener -forwardInvocation:])
+	method implemented to forward to service provider or app delegate.
+
 Tue Dec 25 09:54:21 2001  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Source/NSButtonCell.m ([-drawInteriorWithFrame:inView:]): Draw
